--- a/_pages/group.html
+++ b/_pages/group.html
@@ -1,12 +1,11 @@
 ---
 layout: archive
-title: "Group"
+title: "On the way.."
 permalink: /group/
 author_profile: true
 ---
 
 {% include base_path %}
 
-{% for post in site.group reversed %}
-  {% include archive-single.html %}
-{% endfor %}
+
+------
